fix(form/form-action): update buttons alignment for filled form actions (#1597)

--- a/packages/form/src/assets/css/form.css
+++ b/packages/form/src/assets/css/form.css
@@ -62,6 +62,11 @@ form .field .p-calendar > input {
     flex-direction: row;
   }
 
+  .dz-form-actions[data-alignment="center"],
+  .dz-form-actions[data-alignment="fill"] {
+    flex-direction: row-reverse;
+  }
+
   .dz-form-actions[data-alignment="fill"] button {
     flex: 1;
   }
